correct the footer icon order, background color, text alignment, and added new button styling for the sliders

--- a/_scss/componenets/_footer.scss
+++ b/_scss/componenets/_footer.scss
@@ -5,52 +5,54 @@
   border-top: none;
 }
 
-
-
-a.si-facebook {
-  display: inline-block;
-  float: right;
-  margin-right: 20px;
-  @media (max-width: $width-md) {
-    float: none;
-  }
-}
-
-.icon-facebook {
-  color: white;
-  font-size: 25px;
-  background-color: #3B5998;
-  width: 37px;
-  text-align: center;
-  border-radius: 8px;
-  //margin-right: 20px;
-  @media (max-width: $width-sm) {
-    float: none;
-    //margin-left: 20px;
-    margin-right: auto;
-  }
-}
-
-a.si-google {
-  display: inline-block;
+.social-icon-wrapper {
   float: right;
   @media (max-width: $width-md) {
-    float: none;
-  }
-}
-
-.icon-google {
-  color: white;
-  font-size: 25px;
-  background-color: #b62b1c;
-  border: 1px solid white;
-  width: 37px;
-  text-align: center;
-  border-radius: 8px;
-  float: right;
-  @media (max-width: $width-sm) {
     float: none;
     margin-left: auto;
     margin-right: auto;
+    height: 30px;
+    display: inline-block;
   }
+}
+
+a.si-facebook,
+a.si-twitter,
+a.si-youtube,
+a.si-google {
+  display: inline-block;
+}
+
+.icon-facebook,
+.icon-google,
+.icon-twitter,
+.icon-youtube {
+  color: white;
+  font-size: 25px;
+  width: 37px;
+  text-align: center;
+  @media (max-width: $width-sm) {
+    float: none;
+    margin-right: auto;
+  }
+}
+
+a.si-facebook {
+  margin-right: 20px;
+}
+
+a.si-twitter {
+  margin-right: 20px;
+}
+
+a.si-youtube {
+  margin-right: 20px;
+}
+
+a.si-google {
+  margin-right: 20px;
+}
+
+.margin-top-small {
+  margin-top: 10px;
 }
