--- a/_scss/globals/_colors.scss
+++ b/_scss/globals/_colors.scss
@@ -83,3 +83,13 @@ a.font-white {
 //  background-color: #f9f9f9;
 //}
 
+.btn.btn-slider {
+  background-color: rgba(0,0,0,0);
+  color: #FFF;
+}
+
+a:hover.btn.btn-slider {
+  background-color: #E7E7E7;
+  color: #4A4A4A;
+}
+
