--- a/_scss/globals/_fonts.scss
+++ b/_scss/globals/_fonts.scss
@@ -268,6 +268,7 @@ p {
 
 #logo img {
 	max-width: 250px;
+	padding: 10px;
 }
 
 #section-services p {
