--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -92,6 +92,10 @@ section {
   margin-top: 100px;
 }
 
+.margin-top-small {
+  margin-top: 10px;
+}
+
 .margin-top-md {
   @media (max-width: $width-md) {
     margin-top: 30px;
